update db init